--- a/.postcssrc.json
+++ b/.postcssrc.json
@@ -1,1 +1,7 @@
-{  "plugins": {    "@tailwindcss/postcss": {}  }}
+{
+  "plugins": {
+    "@tailwindcss/postcss": {
+      "content": ["./src/**/*.{html,ts}"]
+    }
+  }
+}
