--- a/angular.json
+++ b/angular.json
@@ -16,9 +16,7 @@
             "outputPath": "dist/alkutab-mat",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets",
@@ -29,9 +27,9 @@
             ],
             "styles": [
               "node_modules/quill/dist/quill.snow.css",
-
-              "src/custom-theme.scss",
-              "src/styles.css"
+              "node_modules/tabulator-tables/dist/css/tabulator_bootstrap5.min.css",
+              "src/styles.css",
+              "src/custom-theme.scss"
             ],
             "scripts": []
           },
@@ -41,7 +39,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumError": "5MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -77,10 +75,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/assets",
@@ -92,6 +87,7 @@
             ],
             "styles": [
               "node_modules/quill/dist/quill.snow.css",
+              "node_modules/tabulator-tables/dist/css/tabulator_bootstrap5.min.css",
               "src/custom-theme.scss",
               "src/styles.css"
             ],
