--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             ],
             "styles": [
               "node_modules/quill/dist/quill.snow.css",
+	              "node_modules/tabulator-tables/dist/css/tabulator_bootstrap5.min.css",
 
               "src/custom-theme.scss",
               "src/styles.css"
@@ -41,7 +42,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumError": "5MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -92,6 +93,8 @@
             ],
             "styles": [
               "node_modules/quill/dist/quill.snow.css",
+              "node_modules/tabulator-tables/dist/css/tabulator_bootstrap5.min.css",
+
               "src/custom-theme.scss",
               "src/styles.css"
             ],
